Abstract PDFExporter to milk and monthly